--- a/time-service.yml
+++ b/time-service.yml
@@ -5,3 +5,16 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+feign:
+  hystrix:
+    enabled: false
+
+hystrix:
+  commands:
+    timeCommandCircuitBreaker:
+      circuitBreakerEnabled: true
+      circuitBreakerSleepWindowInMilliseconds: 10000
+      circuitBreakerRequestVolumeThreshold: 3
+      executionTimeoutEnabled: true
+      executionTimeoutInMilliseconds: 1500
